; ModuleID = '/home/carl/AnghaBench/libgit2/src/extr_path.c_git_path_find_dir.c'
source_filename = "/home/carl/AnghaBench/libgit2/src/extr_path.c_git_path_find_dir.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_7__ = type { i32 }

@GIT_PATH_MAX = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @git_path_find_dir(%struct.TYPE_7__* %0, i8* %1, i8* %2) #0 {
  %4 = alloca %struct.TYPE_7__*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i8*, align 8
  %9 = alloca i64, align 8
  store %struct.TYPE_7__* %0, %struct.TYPE_7__** %4, align 8
  store i8* %1, i8** %5, align 8
  store i8* %2, i8** %6, align 8
  %10 = load %struct.TYPE_7__*, %struct.TYPE_7__** %4, align 8
  %11 = load i8*, i8** %5, align 8
  %12 = load i8*, i8** %6, align 8
  %13 = call i32 @git_path_join_unrooted(%struct.TYPE_7__* %10, i8* %11, i8* %12, i32* null)
  store i32 %13, i32* %7, align 4
  %14 = load i32, i32* %7, align 4
  %15 = icmp ne i32 %14, 0
  br i1 %15, label %31, label %16

16:                                               ; preds = %3
  %17 = load i32, i32* @GIT_PATH_MAX, align 4
  %18 = zext i32 %17 to i64
  %19 = call i8* @llvm.stacksave()
  store i8* %19, i8** %8, align 8
  %20 = alloca i8, i64 %18, align 16
  store i64 %18, i64* %9, align 8
  %21 = load %struct.TYPE_7__*, %struct.TYPE_7__** %4, align 8
  %22 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %21, i32 0, i32 0
  %23 = load i32, i32* %22, align 4
  %24 = call i32* @p_realpath(i32 %23, i8* %20)
  %25 = icmp ne i32* %24, null
  br i1 %25, label %26, label %29

26:                                               ; preds = %16
  %27 = load %struct.TYPE_7__*, %struct.TYPE_7__** %4, align 8
  %28 = call i32 @git_buf_sets(%struct.TYPE_7__* %27, i8* %20)
  store i32 %28, i32* %7, align 4
  br label %29

29:                                               ; preds = %26, %16
  %30 = load i8*, i8** %8, align 8
  call void @llvm.stackrestore(i8* %30)
  br label %31

31:                                               ; preds = %29, %3
  %32 = load i32, i32* %7, align 4
  %33 = icmp ne i32 %32, 0
  br i1 %33, label %43, label %34

34:                                               ; preds = %31
  %35 = load %struct.TYPE_7__*, %struct.TYPE_7__** %4, align 8
  %36 = load %struct.TYPE_7__*, %struct.TYPE_7__** %4, align 8
  %37 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %36, i32 0, i32 0
  %38 = load i32, i32* %37, align 4
  %39 = call i64 @git_path_dirname_r(%struct.TYPE_7__* %35, i32 %38)
  %40 = icmp slt i64 %39, 0
  %41 = zext i1 %40 to i64
  %42 = select i1 %40, i32 -1, i32 0
  store i32 %42, i32* %7, align 4
  br label %43

43:                                               ; preds = %34, %31
  %44 = load i32, i32* %7, align 4
  %45 = icmp ne i32 %44, 0
  br i1 %45, label %49, label %46

46:                                               ; preds = %43
  %47 = load %struct.TYPE_7__*, %struct.TYPE_7__** %4, align 8
  %48 = call i32 @git_path_to_dir(%struct.TYPE_7__* %47)
  store i32 %48, i32* %7, align 4
  br label %49

49:                                               ; preds = %46, %43
  %50 = load i32, i32* %7, align 4
  ret i32 %50
}

declare dso_local i32 @git_path_join_unrooted(%struct.TYPE_7__*, i8*, i8*, i32*) #1

; Function Attrs: nounwind
declare i8* @llvm.stacksave() #2

declare dso_local i32* @p_realpath(i32, i8*) #1

declare dso_local i32 @git_buf_sets(%struct.TYPE_7__*, i8*) #1

; Function Attrs: nounwind
declare void @llvm.stackrestore(i8*) #2

declare dso_local i64 @git_path_dirname_r(%struct.TYPE_7__*, i32) #1

declare dso_local i32 @git_path_to_dir(%struct.TYPE_7__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
